Implemented WALA implementation